# walle

./: Cargo.toml  README.md
walle/: Cargo.toml
walle/src/: config.rs  lib.rs  main.rs  module.rs  project.rs
walle/src/command/: client.rs  mod.rs  server.rs
walle/src/command/client/: add.rs  remove.rs
walle/src/configs/: mod.rs  nodejs.rs  rust.rs  zig.rs
walle/src/modules/: mod.rs
