[workspace]
resolver = "2"
members = [
  "walle",
]

[workspace.package]
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
description = "A disk space recovery tool"
documentation = "https://docs.rs/viz"
edition = "2021"
homepage = "https://github.com/viz-rs/walle"
license = "MIT"
repository = "https://github.com/viz-rs/walle"
version = "0.1.0-beta.1"

[workspace.dependencies]
anyhow = "1.0"
toml = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.5"

tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "sqlite", "time", "uuid"] }

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3
debug = false
