[package]
name = "walle"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
server = []
client = []

[dependencies]
anyhow.workspace = true
toml.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid.workspace = true

tokio = { workspace = true }
sqlx = { workspace = true }

clap = { version = "4.4.7", features = ["derive"] }
clap_complete = "4.4.3"

viz = { git = "https://github.com/viz-rs/viz.git", rev = "e69c3e5", optional = true }
